# PyOptBook

./: pyproject.toml
2.tutorial/: tutorial.ipynb
