[tool.poetry]
name = "pyoptbook"
version = "0.1.0"
description = ""
authors = ["UEMOTO Soichiro <uemoto.soichiro@ryobi.co.jp>"]

[tool.poetry.dependencies]
python = "3.8.10"
jupyter = "^1.0.0"
ipython = "^8.0.1"
notebook = "^6.4.8"
pandas = "^1.4.1"
cvxopt = "^1.2.7"
PuLP = "^2.6.0"
joblib = "^1.1.0"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
numpy = "^1.22.2"
Flask = "^2.0.3"
lxml = "^4.8.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
